<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sideMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sideMenuAccountLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_chart"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@+id/sideMenuAccountLogo"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="140dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/marketPrice"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:text="@string/market_price_usd"
                    android:fontFamily="@font/the_sans_arabic_light"
                    android:textSize="16dp"/>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/totalBitCoins"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:text="@string/total_bitcoins"
                    android:fontFamily="@font/the_sans_arabic_light"
                    android:textSize="16dp"/>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/transactionFees"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:text="@string/transaction_fees"
                    android:fontFamily="@font/the_sans_arabic_light"
                    android:textSize="16dp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/transactionsPerSecond"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:text="@string/transaction_per_second"
                    android:fontFamily="@font/the_sans_arabic_light"
                    android:textSize="16dp"/>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/marketCap"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:text="@string/market_capitalization"
                    android:fontFamily="@font/the_sans_arabic_light"
                    android:textSize="16dp"/>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exchangeTradeVolume"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:text="@string/exchange_trade_volume"
                    android:fontFamily="@font/the_sans_arabic_light"
                    android:textSize="16dp"/>

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/avgBlockSize"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:text="@string/average_block_size"
                    android:fontFamily="@font/the_sans_arabic_light"
                    android:textSize="16dp"/>

                <View
                    android:id="@+id/divider7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>